# Face-Discoloration-Fix

./: .editorconfig  .gitignore  .gitmodules  Build.bat  Build.cmd  CMakeLists.txt  FacegenFixes.sln  FacegenFixes.toml  FacegenFixes.vcxproj  FacegenFixes.vcxproj.filters  LICENSE  README.md  vcpkg.json  version.rc
cmake/: Plugin.h.in  headerlist.cmake  sourcelist.cmake
include/: AutoTOML.hpp
src/: FaceDiscolorationManager.cpp  FaceDiscolorationManager.h  FaceGenLoggingManager.cpp  FaceGenLoggingManager.h  FaceGenManager.cpp  FaceGenManager.h  HeadPartsValidationManager.cpp  HeadPartsValidationManager.h  Hooks.cpp  Hooks.h  IgnorePreprocessedFaceGenManager.cpp  IgnorePreprocessedFaceGenManager.h  Offsets.h  PCH.h  Patches.cpp  Patches.h  ScanOnStartupManager.cpp  ScanOnStartupManager.h  Settings.h  main.cpp  version.h
